# flake

./: .editorconfig  .emacs  .gitignore  .gitmodules  .sops.yaml  configuration.nix  debug  flake.nix  gitw  home.nix  init.lua  installer  iso.nix  justfile  lemptop.nix  mvbs.sh  nix-ontopof-docker2.example.nix  nix-ontopof-dockerfile.nix.example  progs.csv  run.sh  shell-scripts.nix  yubikey-installer.nix
drduh/: signed.txt
emacs/: init.el
email/: gmail.nix  mailsync.nix  neomutt.nix  notmuch.nix
flake-template/: flake.nix
home/: codeium.nix  config.h  kak-lsp.toml  kakoune.nix  mpv.nix  neovim.nix  newsboat.nix  packages.nix  st.nix  suckless.nix
ivi/: ivi.nix
lib/: default.nix  ivi.nix  machine.nix  my.nix
machines/: cal.nix  gpg.nix  lemptop.nix  pump-netboot.nix  pump.nix  serber.nix  vm-aarch64.nix  work.nix  wsl.nix
mut/: DefaultKeyBinding.dict
mut/lf/: icons  (+3 more)
neovim/: debug  init.fnl  init.lua  oldinit.lua
overlays/: .#vimPlugins.nix  fennel-language-server.nix  fzf.nix  openpomodoro-cli.nix  suckless.nix  treesitter.nix  vimPlugins.nix
profiles/: vmware-guest.nix
secrets/: hello  mopidy.yaml  new  porkbun  root.yaml  sabnzb  syncthing.yaml  tailscale  transmission
shell-scripts/: ansiblelint  azdo-switch-project  azdo-throwaway-clone  checkout  compile  fawx  filter-ansi  get-sshables  gh-switch-project  kakup  kubeconfig-merge  mailsync  news  nix-proxy  nix-up  nixup  notmuch-hook  pass-ansible-vault-client  sb-clock  sb-mailbox  sb-news  set-bg  spectrwmbar  terragrunt  tmux-normal-mode
templates/ansible/: flake.nix  pyproject.toml
(+170 files in other folders)
